kubernetes/apps/monitoring/victoria-metrics/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics-write
  namespace: monitoring
spec:
  hostnames: ["vm-write.k8s.alexieff.io"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-vmsingle
          port: 8429
